# NetPulse

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
